Fix main content container overflow

--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ h2 {
 
 .main-content-container {
     width: 100%;
-    margin: 20px 0px 0px 20px;
+    padding: 20px 20px 0px 20px;
 }
 
 .project-anouncement-divider {
